src/main/resources/mysql/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
  labels:
    app: employee-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-pod
      tier: web
  template:
   metadata:
      labels:
        app: employee-pod
        tier: web
   spec:
     containers:
     - name: kubernetes-secret
       image: eshghos/kubernetes-secret:latest
       ports:
        - containerPort: 8081
       env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom: 
              configMapKeyRef:
                name: db-conf  # name of configMap
                key: host
          - name: DB_NAME  # Setting Database name from configMap
            valueFrom:
              configMapKeyRef:
                name: db-conf 
                key: name
          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials # Secret Name
                key: username
          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom:
              secretKeyRef:
                name: db-credentials # Secret Name
                key: password
