src/main/resources/mysql/mysql-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: onehrmysql-deploy
  labels:
    app: onehrdeploy
spec:
  selector:
    matchLabels:
      app: onehr
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: onehr
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7 # image from docker-hub
        args:
          - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
        name: mysql 
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:        # Mounting volume obtained from Persistent Volume Claim
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
      volumes:
      - name: mysql-persistent-storage # Obtaining 'volume' from PVC
        persistentVolumeClaim:
          claimName: mysql-pvc-claim
