src/main/resources/mysql/nginx-withoutgce.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: gce
    hostPath:
       path: /tmp/share
  containers:
  - image: nginx:latest
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: gce
      mountPath: /tmp/data
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
