src/main/resources/mysql/employee-details-service-load-balance.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-deatils-service
  labels:
    app: employee-app
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      targetPort: 8081
      #nodePort: 30004
      #protocol: TCP
  selector:
    app: employee-pod
    tier: web
