src/main/resources/mysql/employee-salary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-salary-service
  labels:
    app: employee-app
spec:
  type: ClusterIP
  ports:
    - port: 8183
      targetPort: 8183
      protocol: TCP
  selector:
    app: employee-salary-pod
    tier: salary
  clusterIP: None
