src/main/resources/mysql/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  labels:
    app: employee-app
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30004
  selector:
    app: employee-pod
    tier: web
