src/main/resources/mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onehrmysql-service
  labels:
    app: onehrservice
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: onehr
    tier: mysql
