src/main/resources/mysql/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: onehr-ingress
  namespace: default
spec:
  rules:
  - host: hrsolutions.com
    http:
      paths:
      - backend:
          serviceName: employee-service
          servicePort: 8081
        path: /employee
